--- a/index.html
+++ b/index.html
@@ -3,34 +3,69 @@
   <head>
     <title>vvchrnkvblog</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="normalize" href="./normalize.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
   </head>
   <body>
       <header class="header">
-          <h1>Что учили, то и научили.
+            <h1>Что учили, то и научили.
               <br> Коротко о главном из жизни обучения мастера.
-          </h1>
-      </header>
-      <nav class="navigation">
+            </h1>
+        
+            <nav class="navigation">
             <div>
                 <tr>
-                    <td><a href="#post1">Заголовок 1🙁</a></td>
-                    <td><a href="#post2">Заголовок 2😟</a></td>
-                    <td><a href="#post3">Заголовок 3😦</a></td>
+                    <td><a href="#post1">🙁</a></td>
+                    <td><a href="#post2">😟</a></td>
+                    <td><a href="#post3">😦</a></td>
                 </tr>
             </div>
-      </nav>
+      </header>
+            </nav>
       <main>
+        <section class="intro">
+                <h2>Что это</h2>
+            <div id="intromsg">
+                <p>Однажды, кто-то увидит этот блог. Он создан с максимально эгоистичной целью – чтобы его никто не увидел.
+                    Здесь я хочу просто писать, чтобы учиться и помнить. Учиться я буду фронтенду, а помнить – что написал. 
+                </br>Вот так просто.
+                </p>
+                <div id="intromsgbox">
+                    <p>Блог – ниже</p>
+                    <img id="intromsgboximg" src="https://media.giphy.com/media/26BGAOkDPOZTXwmHK/giphy.gif"></img>
+                </div>
+                <div id="napishi">
+                        <p>Напиши сюда что <span style="color:red">хочешь: </span></p>
+                        <input type="text" placeholder="Я хочу..">
+                    </div>
+            </div>
+        </section>
         <section class="mainfeed">
                 <div id="post1" class="post post1">
-                        <h2>Заголовок 1🙁</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <h2>Пост 1. День 1. Терпение</h2>
+                        <p><span style="font-weight:bold">Всем, кто задумывается об изучении нового</span> я бы посоветовал набраться терпения. 
+                        </br>Терпение, в нашем восприятии – нечто обязательное и очень массивное. На деле – его постоянно не хватает. 
+                            Впервые я начал изучать что-то связанное с версткой и веб-технологиями 3 года назад. 
+                            3 года потребовалось, чтобы научиться делать страницы, типа этой. На саму страницу пока ушло 5 часов. 
+                            Именно столько чистого времени из 3-х лет, что я знаю что-то про сайтостроение.
+                        </br>Проблема в тяжести получения знаний? – нет.
+                        </br>Проблема в самой науке? – нет. 
+                        </br>Проблема в терпении? – <span style="color:red">да</span>
+                        </br>В первые я столкнулся с необходимостью изучения html и css, когда мы с ребятами делали <a href="https://gospodin-elkin.ru">Господина Ёлкина</a>.
+                        Мы собрали лендинг на лпгенераторе и столкнулись с проблемой – всё было до безумия криво.
+                        Мысль залезть в код и попробовать что-то поправить пришла первой. Ведь я уже читал на википедии про href и &lt;a&gt;! 
+                        И вот, спустя час мучений, <span style="font-weight:bold">получилось</span> поменять цвет текста. Я выделил ужасное слово, из-за которого подход "делать терпеливо" испарился.
+                        Вместе с ним и 26275 часов правильного обучения.</br>
+                        <span style="font-weight:bold;">Основной урок – никогда не торопиться, набраться терпения. В конечном итоге – это экономит время.</span>
                         </p>
-                        <aside><img class="postimg postimg1" src="https://24smi.org/public/media/2017/2/15/06_L3oBmVl.jpg" alt="гомер">
-                        </aside>
+                        <p style="text-align:center"><img src="./images/gospodinelkindev.png" style="height: 500px">
+                        </br>
+                        Пример "великих" созиданий в девелопер консоли
+                        </p>
+                        
                 </div>
+
                 <div id="post2" class="post post2" >
                         <h2>Заголовок 2😞</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
